2013-01-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Faster the decoding of instructions.

2013-01-11 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: More control characters are recognized.
	  Refinement the align of explanations.

2013-01-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/main.c: Nearly exact instruction sizes for peephole
	  branch optimizations.

2013-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genSend): "fix" for bug #3600343

2013-01-10 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Simplified the code.

2013-01-10 Molnar Karoly <molnarkaroly AT users.sf.net>

	* doc/sdccman.lyx: Expanded the 6.2 (Tools) table.

2013-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c (packRegisters),
	* src/hc08/gen.c (aopForRemat): allow more rematerializations of
	  cast pointers
	* src/hc08/ralloc2.cc (operand_is_ax): fixed bug that misidentified
	  some register assignments as the register pair AX

2013-01-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y,
	* src/SDCCast.h,
	* src/SDCCast.c: Move the test condition of a for-loop to the end of
	  the loop if it is always true for the first iteration of the loop
	  and has no side-effects.

2013-01-09 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Internal restructuring an bug fixes.

2013-01-08 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Prints in table the embedded constants.

2013-01-07 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm: Renamed to mcs51-disasm.pl

2013-01-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c,
	* src/hc08/ralloc2.cc: Support more register combinations
	  with pointer get/set and ifx iCodes. Allow rmw instructions to
	  use X as a scratch register.